--- a/blog/20250531T081341--experimenting-with-denote-links__blog_denote.org
+++ b/blog/20250531T081341--experimenting-with-denote-links__blog_denote.org
@@ -2,7 +2,7 @@
 #+date:       [2025-05-31 Sat 08:13]
 #+filetags:   :blog:denote:
 #+identifier: 20250531T081341
-#+description: Teething issues getting internal links to work.
+#+description: Tackling teething issues getting internal links to work.
 
 As mentioned in [[denote:20250530T220811][the first post]], I'm using Denote to manage my blog.
 One issue I identified with it was the potential instability of links to specific blog posts, since the file names can change automatically, due to, for instance, changes to the ~filetags~.
