--- a/ox-test.org
+++ b/ox-test.org
@@ -49,7 +49,15 @@ sentence. A cool sentence. A cool sentence. A cool sentence. A cool
 sentence.
 * Second Top-Level Heading!
 ** Coolest
+* Code
+Let's see if htmlize just works (I'm not optimistic).
 
+#+begin_src c
+#include <stdio.h>
+int main() {
+  printf("Hello world\n");
+}
+#+end_src
 * Footnotes
 [fn:2] They also tend to be awkward to style in HTML, but I'll go to the effort anyway because I'm unhealthily obsessed with getting everything right.
 
