index.org: Updated references to old site

--- a/index.org
+++ b/index.org
@@ -10,7 +10,6 @@ To you, I am a stranger on the internet with an interest in computer science and
 
 This website is now generated using [[https://orgmode.org][Org-Mode]]. For more information on
 how this works, check out my [[file:blog/first-blog-post-with-org.org][First Blog Post with Org]].
-At the time of writing, I am in the process of porting some of the content over from [[https://aidanhall.gitlab.io][my old website]], but there's a lot of stuff there, so I might leave it as-is.
 
 * Sitemap
 :PROPERTIES:
@@ -22,4 +21,4 @@ At the time of writing, I am in the process of porting some of the content over 
 - [[https://github.com/aidan-hall][GitHub]]
 - [[https://gitlab.com/aidanhall][GitLab]]
 - [[https://aidan-hall.itch.io/][Itch.io]] (games)
-
+- [[https://aidanhall.gitlab.io][My old website]] (archival)
