blog: Atom feed post

--- a/wiki/website-tech-stack.org
+++ b/wiki/website-tech-stack.org
@@ -1,3 +1,6 @@
+:PROPERTIES:
+:ID:       b471100e-0ae5-43ae-8c33-7288e7a2ca64
+:END:
 #+title: Website Tech Stack
 #+date: [2025-10-19 Sun 18:14]
 #+description: The tech stack I use for this website.
@@ -11,6 +14,10 @@ There are few technologies more [[https://en.wikipedia.org/wiki/Lindy_effect][Li
 Org is a superior markup language, for short and medium-length articles.
 I prefer my long-form writings to be self-contained, and portable, so I would continue to use LaTeX and Typst for anything of the sort.
 
+** Atom Feed
+:PROPERTIES:
+:ID:       9b5c8bad-e7ff-4b6d-87f8-a5d6c7250fd0
+:END:
 It seems that [[https://peregrinator.site/blog/building-a-blogging-flow-using-emacs-and-emacs-only.html][the popular choice]] for generating a syndication feed for blogs written with Org is to use [[https://github.com/benedicthw/ox-rss][ox-rss]].
 This would add significant complexity to the blog, not to mention a dependency outside of core Emacs.
 To use ox-rss, I would need to massage my list of posts into the particular format it expects, so I have written a custom Atom feed generator myself.
