--- a/blog/atom-feed.org
+++ b/blog/atom-feed.org
@@ -3,4 +3,5 @@
 #+description: Pointless noise that generates a feed entry.
 
 RSS is /so/ 2004, and all readers that matter support both.
-See [[id:9b5c8bad-e7ff-4b6d-87f8-a5d6c7250fd0][this section of my tech stack page]] for more information.
+See [[file:../wiki/website-tech-stack.org::#atom-feed][this section of my tech stack page]] for more information.
+
