--- a/index.org
+++ b/index.org
@@ -16,10 +16,12 @@ how this works, check out my [[file:blog/first-blog-post-with-org.org][First Blo
 :HTML_CONTAINER_CLASS: index-spread
 :END:
 ** Here
-- [[file:blog][Blog]]
-- [[file:wiki][Wiki]]
+- [[file:blog][Blog]] (ephemeral notes)
+- [[file:wiki][Wiki]] (longer articles)
+- [[file:talks.org][Talks]]
+
 ** Elsewhere
 - [[https://github.com/aidan-hall][GitHub]]
 - [[https://gitlab.com/aidanhall][GitLab]]
-- [[https://aidan-hall.itch.io/][Itch.io]] (games)
-- [[https://aidanhall.gitlab.io][My old website]] (archival)
+- [[https://aidan-hall.itch.io/][Itch.io]]
+- [[https://aidanhall.gitlab.io][My old website]]
