--- a/index.org
+++ b/index.org
@@ -1,7 +1,7 @@
 #+title: Aidan Hall
 #+description: Homepage
 
-#+attr_html: :title Me :width 256 :height 256 :defer "" :class rfloat circle
+#+attr_html: :title Me :class rfloat circle
 [[file:files/pics/moon-silhouette-aidan-256.webp]]
 
 * Who am I? What is this place?
