--- a/wiki/website-tech-stack.org
+++ b/wiki/website-tech-stack.org
@@ -27,8 +27,8 @@ It generates an Atom feed as a sitemap.
 I have chosen to use the RSS logo ([[file:../files/pics/feed-icon.webp]]) to represent my feeds, despite the fact that Atom has its own, [[https://en.wikipedia.org/wiki/Atom_(web_standard)][much cooler]] logo. Unfortunately, the Atom logo is much harder to recognise at the small size I would want to display it, and less well-known overall, compared to the RSS logo.
 
 ** Hosting
-The sources for this website are in [[https://gitlab.com/aidanhall/orgsite][a public GitLab repository]], and the site itself is currently hosted using [[https://docs.gitlab.com/user/project/pages/][GitLab pages]]. Past forms of this site have been hosted on:
-- GitHub pages,
-- Neocities,
-- a Raspberry Pi,
-- my university CS department's Linux server.
+The sources for this website are in [[https://github.com/aidan-hall/orgsite][a public GitHub repository]], and the site itself is currently hosted using [[https://docs.github.com/en/pages][GitHub pages]]. Past forms of this site have been hosted on:
+- Neocities (limited configuration),
+- a Raspberry Pi (low uptime),
+- my university CS department's Linux server (no longer accessible),
+- GitLab pages (too slow).
