wiki/quotes.org: Added date
This is just to keep the order of the wiki sitemap list stable.
It would probably be better to use a different sitemap generator for the wiki that does not show timestamps, and perhaps sorts the entries alphabetically to de-emphasise the order.

--- a/wiki/quotes.org
+++ b/wiki/quotes.org
@@ -1,4 +1,5 @@
 #+title: Quotes
+#+date: [2025-05-31 Sat 11:22]
 #+description: Miscellaneous interesting CS quotes.
 
 Here is a collection of interesting quotes related to Computer Science that I have found over the years.
