--- a/blog/opengl-overloaded-uniform-setter.org
+++ b/blog/opengl-overloaded-uniform-setter.org
@@ -1,4 +1,5 @@
-#+title: Using Template and Macro Dark Arts to Make a Smart C++ OpenGL Uniform Setter
+#+title: OpenGL Uniform Setter
+#+description: Using Template and Macro Dark Arts to Make a Smart C++ OpenGL Uniform Setter
 #+date: [2023-02-19 13:37]
 
 I'm on my third attempt at going through the
